# polygrams-and-spirals

./: .gitignore  README.md  pyproject.toml  setup.py
generate/: __main__.py  calculations.py
